Sat Nov 10 16:22:09 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: optionally use GtkAboutDialog if we have GTK
	2.6 and higher

	* src/gnome-genius.c, src/genius.c, src/Makefile.am: better checking
	if we are in the development directory and if so, don't init binreloc
	and use the local lib.cgel

Sat Nov 10 13:51:26 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix fit dependent axis zoom for parametric plots

	* src/dict.[ch], src/gnome-genius.c, src/eval.c: Add names to
	  contexts and print these when showing local variables so that you
	  can see the "backtrace".  Also the display of vars is slightly
	  nicer now.

Thu Nov 08 00:51:16 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/genius.c, src/funclib.c, src/plugin.c,
	  src/lexer.l, src/binreloc.[ch], acinclude.m4, src/Makefile.am:
	  add and use Binreloc code from autopackage to allow relocatable
	  executables.  Slightly massaged the code/auto* stuff to make it
	  work.

Mon Nov 05 01:31:51 2007  Jiri (George) Lebl <jirka@5z.com>

	* Makefile.am: add the INSTALL.MacOSX file to EXTRA_DIST

Mon Nov 05 00:15:09 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.[ch], src/mpwrap.[ch], src/funclib.c, src/genius.c,
	  src/gnome-genius.c, src/structs.h src/geloutput.[ch]:  Implement
	  OutputChopExponent and OutputChopWhenExponent parameters.  These
	  will chop small numbers if they appear near large numbers.

	* src/gnome-genius.c: try to use G_DIR_SEPARATOR more just in case
	  someone will start porting genius

	* help/C/*.xml: update documentation for chopping

	* src/geniustests.txt: add tests for chopping

	* README, NEWS: update

Sun Nov 04 02:37:58 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: unswap x and y.  They are now in correct positive
	  orientation in gtkextra.

	* src/gnome-genius.c, pixmaps/gnome-graph.png: add a simple "logo"
	  to the about box

	* NEWS: update

Sat Nov 03 20:51:37 2007  Jiri (George) Lebl <jirka@5z.com>
