@@ -1,3 +1,8 @@
+Sat Nov 10 16:58:14 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: migrate to GtkFontButton and add website addy
+	  to about box
+
 Sat Nov 10 16:22:09 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: optionally use GtkAboutDialog if we have GTK
